--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,31 @@
 micronaut:
   application:
     name: optimisticLock
+
 datasources:
   default:
-    url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
-    driverClassName: org.h2.Driver
-    username: sa
-    password: ''
-    schema-generate: CREATE_DROP
-    dialect: H2
-jpa.default.properties.hibernate.hbm2ddl.auto: update
+    url: "jdbc:mariadb://${MARIADB_HOST:localhost}:${MARIADB_PORT:3306}/opti?createDatabaseIfNotExist=true"
+    driverClassName: org.mariadb.jdbc.Driver
+    username: root
+    password: dontTellAnyone
+    initialization-fail-timeout: "${MARIADB_CONNECTION_TIMEOUT:1}"
+
+jpa:
+  default:
+    entity-scan:
+      packages: 'optimistic.lock'
+    properties:
+      hibernate:
+        hbm2ddl:
+          auto: validate
+        show_sql: true
+        dialect: org.hibernate.dialect.MariaDB103Dialect
+        physical_naming_strategy: optimistic.lock.extra.JpaPhysicalNamingStrategy
+        implicit_naming_strategy: optimistic.lock.extra.JpaImplicitNamingStrategy
+
+flyway:
+  datasources:
+    default:
+      locations: classpath:db
+
+
