--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 micronautVersion=3.2.0
+#micronautVersion=3.0.3
 org.gradle.java.installations.auto-download=false
 org.gradle.java.installations.auto-detect=false
 org.gradle.java.installations.fromEnv=JAVA_HOME
