--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 plugins {
     id("groovy") 
     id("com.github.johnrengelman.shadow") version "7.1.0"
-    id("io.micronaut.application") version "3.0.0"
+    id 'org.springframework.boot' version '2.5.2'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+
 }
 
 version = "0.1"
@@ -11,38 +13,50 @@ repositories {
     mavenCentral()
 }
 
-micronaut {
-    runtime("netty")
-    testRuntime("spock2")
-    processing {
-        incremental(true)
-        annotations("optimistic.lock.*")
-    }
-}
+//micronaut {
+//    runtime("netty")
+//    testRuntime("spock2")
+//    processing {
+//        incremental(true)
+//        annotations("optimistic.lock.*")
+//    }
+//}
 
 dependencies {
-    annotationProcessor("io.micronaut:micronaut-http-validation")
-    annotationProcessor("io.micronaut.data:micronaut-data-processor")
-    implementation("io.micronaut:micronaut-http-client")
-    implementation("io.micronaut:micronaut-runtime")
-    implementation("io.micronaut.data:micronaut-data-hibernate-jpa")
-    implementation("io.micronaut.sql:micronaut-jdbc-hikari")
+//    annotationProcessor("io.micronaut:micronaut-http-validation")
+//    annotationProcessor("io.micronaut.data:micronaut-data-processor")
+//    implementation("io.micronaut:micronaut-http-client")
+//    implementation("io.micronaut:micronaut-runtime")
+//    implementation("io.micronaut.data:micronaut-data-hibernate-jpa")
+//    implementation("io.micronaut.sql:micronaut-jdbc-hikari")
     implementation("javax.annotation:javax.annotation-api")
     runtimeOnly("ch.qos.logback:logback-classic")
-    implementation("io.micronaut:micronaut-validation")
+//    implementation("io.micronaut:micronaut-validation")
     annotationProcessor "org.projectlombok:lombok"
     testAnnotationProcessor "org.projectlombok:lombok"
     compileOnly "org.projectlombok:lombok"
-    implementation("io.micronaut.flyway:micronaut-flyway")
+    implementation "org.flywaydb:flyway-core:8.2.0"
+//    implementation("io.micronaut.flyway:micronaut-flyway")
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.codehaus.groovy:groovy'
+    testImplementation 'org.spockframework:spock-core:2.1-M2-groovy-3.0'
+    testImplementation('org.spockframework:spock-spring:2.1-M2-groovy-3.0')
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
+
 
     runtimeOnly "org.mariadb.jdbc:mariadb-java-client"
 
 }
 
-
-application {
-    mainClass.set("optimistic.lock.Application")
+test {
+    useJUnitPlatform()
 }
+
+//application {
+//    mainClass.set("optimistic.lock.Application")
+//}
 java {
     sourceCompatibility = JavaVersion.toVersion("16")
     targetCompatibility = JavaVersion.toVersion("16")
